kustomize/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-proj"  # GCP에서 생성한 글로벌 정적 IP 이름
    networking.gke.io/managed-certificates: "managed-cert"  # 관리형 인증서 이름
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: cloud.providehighvalue.com
    http:
      paths:
      - path: /frontend/
        pathType: Prefix
        backend:
          service:
            name: frontend-external
            port: 
              number: 80
      - path: /wordpress
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port: 
              number: 80
      - path: /2048
        pathType: Prefix
        backend:
          service:
            name: deployment-2048
            port: 
              number: 10000
      - path: /mario
        pathType: Prefix
        backend:
          service:
            name: mario
            port: 
              number: 77
